Changed UI color and added mobile responsiveness.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <meta name="description" content="sendmail +++++++++++++++++++++++++++++++." />
+    <meta name="description" content="SendMail +++++++++++++++++++++++++++++++." />
 
     <link
         href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600|Nunito:300,300i,400,600&display=swap"
         rel="stylesheet" />
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
     <script src="https://kit.fontawesome.com/d0cbf0cdf0.js" crossorigin="anonymous"></script>
@@ -18,7 +21,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Sendmail &mdash; secured mail</title>
+    <title>SendMail &mdash; secured mail</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.png">
 </head>
 
@@ -27,7 +30,7 @@
 
         <div class="navigation">
             <a href="#">
-                <img class="logo" alt="Sendmail logo" src="img/favicon.png" />
+                <img class="logo" alt="SendMail logo" src="img/favicon.png" />
             </a>
 
             <nav class="main-nav">
@@ -52,7 +55,7 @@
                     Secure Email Solutions
                 </h1>
                 <p class="hero-text-mini">
-                    We deliver premium services to safeguard your emails
+                    We deliver premium services to safeguard your emails.
                 </p>
 
                 <div class="hero-btn">
@@ -61,7 +64,7 @@
                     <button class="hero-btn-reg">Register here</button>
                 </div>
 
-                <div class="delivered-meals">
+                <div class="delivered-emails">
                     <div class="delivered-imgs">
                         <img src="img/customer-1.jpg" alt="customer photo" />
                         <img src="img/customer-2.jpg" alt="customer photo" />
@@ -85,7 +88,7 @@
     <div class="section-about">
         <div class="about">
             <div class="about-heading">
-                Sendmail - <span class="about-span"> Who are we?!</span>
+                SendMail - <span class="about-span"> Who are we?!</span>
                 <img class="stroke" src="./img/stroke.png" alt="Underline">
             </div>
             <p class="about-text">
@@ -100,7 +103,10 @@
 
     <div class="section-feature">
         <div class="feature">
-            <p class="feature-heading">Why choose us <span class="feature-heading_span">Today?!</span></p>
+            <div class="feature-heading">
+                <p class="feature-heading">Why choose us <span class="feature-heading_span">Today?!</span></p>
+                <img class="stroke" src="./img/stroke.png" alt="Underline">
+            </div>
 
             <div class="featured">
                 <div class="featured-group">
