Added Sign up section and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         <a class="main-nav-link" href="#features">Features</a>
                     </li>
                     <li><a class="main-nav-link" href="#blog">Blog</a></li>
-                    <li><a class="main-nav-link hero-btn-login" href="#cta">Login</a></li>
-                    <li><a class="main-nav-link hero-btn-reg" href="#cta">Register</a></li>
+                    <li><a class="main-nav-link hero-btn-dark" href="#cta">Login</a></li>
+                    <li><a class="main-nav-link hero-btn-light" href="#cta">Register</a></li>
                 </ul>
             </nav>
 
@@ -68,8 +68,8 @@
 
                 <div class="hero-btn">
                     <h2 class="hero-btn-text">Have an account? Login or kindly register an account with us?</h2>
-                    <button class="hero-btn-login">Login here</button>
-                    <button class="hero-btn-reg">Register here</button>
+                    <button class="hero-btn-dark">Login here</button>
+                    <button class="hero-btn-light">Register here</button>
                 </div>
 
                 <div class="delivered-emails">
@@ -97,7 +97,7 @@
                 ninja-like security measures. Rest assured, your messages are guarded by our army of cyber superheroes.
                 Join us in this epic quest for email privacy and become a part of the SendMail revolution today!
             </p>
-            <button class="hero-btn-login">Read More</button>
+            <button class="hero-btn-dark">Read More</button>
         </div>
     </div>
 
@@ -189,6 +189,52 @@
                     </p>
                 </div>
 
+            </div>
+        </div>
+    </div>
+
+    <div class="section-registration">
+        <div class="registration">
+            <div class="registration-cta">
+                <div class="registration-cta-text_box">
+                    <h2 class="registration-heading">
+                        Get your first 30 days free by registering today.
+                    </h2>
+
+                    <form class="registration-form" name="sign-up" netlify>
+                        <div class="registration-form_input">
+                            <input type="text" placeholder="Enter your name" required>
+                        </div>
+
+                        <div class="registration-form_input">
+                            <input type="text" placeholder="Enter your email" required>
+                        </div>
+
+                        <div class="registration-form_input">
+                            <input type="password" placeholder="Create password" required>
+                        </div>
+
+                        <div class="registration-form_input">
+                            <input type="password" placeholder="Confirm password" required>
+                        </div>
+
+                        <div class="registration-form_policy">
+                            <input type="checkbox">
+                            <h3 class="policy-text">I accept all Terms & Conditions</h3>
+                        </div>
+
+                        <button class="hero-btn-dark">Sign Up <span>&#8594</span></button>
+
+                        <div class="registration-form_user">
+                            <h3 class="registration-form-user_login">Already have an account? <a href="#"
+                                    class="registration-form-user_login-link"> &nbsp Login now </a>
+                            </h3>
+                        </div>
+
+                    </form>
+                </div>
+
+                <div class="registration-cta-image" role="img" aria-label="Registration image"></div>
             </div>
         </div>
     </div>
