Fixed a few bugs...

--- a/sign-up.html
+++ b/sign-up.html
@@ -69,19 +69,19 @@
 
                     <form class="registration-form" name="sign-up" netlify>
                         <div class="registration-form_input">
-                            <input type="text" placeholder="Enter your name" required>
+                            <input type="text" name="name" placeholder="Enter your name" required>
                         </div>
 
                         <div class="registration-form_input">
-                            <input type="text" placeholder="Enter your email" required>
+                            <input type="text" name="email" placeholder="Enter your email" required>
                         </div>
 
                         <div class="registration-form_input">
-                            <input type="password" placeholder="Create password" required>
+                            <input type="password" name="password" placeholder="Create password" required>
                         </div>
 
                         <div class="registration-form_input">
-                            <input type="password" placeholder="Confirm password" required>
+                            <input type="password" name="password" placeholder="Confirm password" required>
                         </div>
 
                         <div class="registration-form_policy">
