Corrected error in blog link in footer

--- a/index.html
+++ b/index.html
@@ -315,7 +315,6 @@
     <footer class="section-footer">
         <div class="footer">
             <div class="footer-image">
-                <!-- <div class="footer-text">SendMail</div> -->
                 <a href="/index.html">
                     <img class="footer-logo" alt="SendMail logo" src="img/logo-2.png" />
                 </a>
@@ -328,7 +327,7 @@
                     <li>
                         <a class="footer-nav-link" href="#features">Features</a>
                     </li>
-                    <li><a class="footer-nav-link" href="#blog">Blog</a></li>
+                    <li><a class="footer-nav-link" href="blog.html">Blog</a></li>
                 </ul>
             </nav>
 
